--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lobster&display=swap" rel="stylesheet">
-        <title>My CIS 301 Portfolio</title>
+        <title>My CIS 302 Portfolio</title>
     </head>
     
     <body>
         <h1 class="lobster">CIS 302: JavaScript Fundamentals</h1>
         <table class="lobster">
             <tr>
-                <th></th>
-                
+                <th style="border-right: 1px solid black;">
+                    <p>Name:</p>
+                </th>
+                <th>
+                    <p>Celia Cen</p>
+                </th>
             </tr>
             <tr>
-                <td>
-                        <figure>
-                        <img src="selfie.jpg" alt="my selfie">
-                        <figcaption >Celia Cen</figcaption>
-                        </figure>
+                <td style="border-right: 1px solid black;">
+                    <figure>
+                    <img src="selfie.jpg" alt="my selfie">
+                    <figcaption >Celia Cen</figcaption>
+                    </figure>
                 </td>
                 <td>
                     <p id="tableH">Links to JavaScript Projects:</p>
@@ -34,9 +38,9 @@
                         <li><a href="https://celiacen08.github.io/JSQuiz/" target="_blank">A JavaScript Quiz</a></li> 
                     </ul>
                 </td>
-            </tr>
 
-            <p class="lobster">My CIS 302 Portfolio</p>
+                <h2 class="lobster">My CIS 302 Portfolio</h2>
+            </tr>
 
         </table>
     </body>
